Implement New ViewInvoice

--- a/ProjectManagement/Views/Clients/EditClient.cshtml
+++ b/ProjectManagement/Views/Clients/EditClient.cshtml
@@ -16,12 +16,12 @@
     <br />
     <div class="form-group">
         <label>Enter Client Address:</label>
-        <input asp-for="Email" type="text" value="@Model.Address" class="form-control">
+        <input asp-for="Address" type="text" value="@Model.Address" class="form-control">
     </div>
     <br />
     <div class="form-group">
         <label>Enter Client Phone Number:</label>
-        <input asp-for="Email" type="number" value="@Model.PhoneNumber" class="form-control">
+        <input asp-for="PhoneNumber" type="number" value="@Model.PhoneNumber" class="form-control">
         <span asp-validation-for="PhoneNumber" style="color: red;"></span>
     </div>
     <br />
