--- a/ProjectManagement/Views/Invoices/ViewInvoice.cshtml
+++ b/ProjectManagement/Views/Invoices/ViewInvoice.cshtml
@@ -1,6 +1,11 @@
 ﻿@using PMISBLayer.Entities
 @model Invoice
-<script>
+
+@{ 
+    var Total = 0.0;
+}
+<!--
+ <script>
     function GetInvoice() {
         var Id = $("#Id").val();
         $.ajax({
@@ -42,244 +47,235 @@
     }
     $(document).ready(GetInvoice);
 </script>
+-->
+
 <br />
 <br />
 <input asp-for="Id" value="@Model.Id" style="display:none;" />
 
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <style>
     body {
         margin-top: 20px;
-        color: #484b51;
+        background: #eee;
     }
 
-    .text-secondary-d1 {
-        color: #728299 !important;
+    .invoice {
+        background: #fff;
+        padding: 20px
     }
 
-    .page-header {
-        margin: 0 0 1rem;
-        padding-bottom: 1rem;
-        padding-top: .5rem;
-        border-bottom: 1px dotted #e2e2e2;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-pack: justify;
-        justify-content: space-between;
-        -ms-flex-align: center;
-        align-items: center;
+    .invoice-company {
+        font-size: 20px
     }
 
-    .page-title {
-        padding: 0;
-        margin: 0;
-        font-size: 1.75rem;
-        font-weight: 300;
+    .invoice-header {
+        margin: 0 -20px;
+        background: #f0f3f4;
+        padding: 20px
     }
 
-    .brc-default-l1 {
-        border-color: #dce9f0 !important;
+    .invoice-date,
+    .invoice-from,
+    .invoice-to {
+        display: table-cell;
+        width: 1%
     }
 
-    .ml-n1, .mx-n1 {
-        margin-left: -.25rem !important;
+    .invoice-from,
+    .invoice-to {
+        padding-right: 20px
     }
 
-    .mr-n1, .mx-n1 {
-        margin-right: -.25rem !important;
+        .invoice-date .date,
+        .invoice-from strong,
+        .invoice-to strong {
+            font-size: 16px;
+            font-weight: 600
+        }
+
+    .invoice-date {
+        text-align: right;
+        padding-left: 20px
     }
 
-    .mb-4, .my-4 {
-        margin-bottom: 1.5rem !important;
+    .invoice-price {
+        background: #f0f3f4;
+        display: table;
+        width: 100%
     }
 
-    hr {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        border: 0;
-        border-top: 1px solid rgba(0,0,0,.1);
+        .invoice-price .invoice-price-left,
+        .invoice-price .invoice-price-right {
+            display: table-cell;
+            padding: 20px;
+            font-size: 20px;
+            font-weight: 600;
+            width: 75%;
+            position: relative;
+            vertical-align: middle
+        }
+
+            /*.invoice-price .invoice-price-left .sub-price {
+                display: table-cell;
+                vertical-align: middle;
+                padding: 0 20px
+            }*/
+
+        .invoice-price small {
+            font-size: 12px;
+            font-weight: 400;
+            display: block
+        }
+
+        /*.invoice-price .invoice-price-row {
+            display: table;
+            float: left
+        }*/
+
+        .invoice-price .invoice-price-right {
+            width: 25%;
+            background: #2d353c;
+            color: #fff;
+            font-size: 28px;
+            text-align: right;
+            vertical-align: bottom;
+            font-weight: 300
+        }
+
+            .invoice-price .invoice-price-right small {
+                display: block;
+                opacity: .6;
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                font-size: 12px
+            }
+
+    .invoice-footer {
+        border-top: 1px solid #ddd;
+        padding-top: 10px;
+        font-size: 10px
     }
 
-    .text-grey-m2 {
-        color: #888a8d !important;
+    .invoice-note {
+        color: #999;
+        margin-top: 80px;
+        font-size: 85%
     }
 
-    .text-success-m2 {
-        color: #86bd68 !important;
+    .invoice > div:not(.invoice-footer) {
+        margin-bottom: 20px
     }
 
-    .font-bolder, .text-600 {
-        font-weight: 600 !important;
-    }
-
-    .text-110 {
-        font-size: 110% !important;
-    }
-
-    .text-blue {
-        color: #478fcc !important;
-    }
-
-    .pb-25, .py-25 {
-        padding-bottom: .75rem !important;
-    }
-
-    .pt-25, .py-25 {
-        padding-top: .75rem !important;
-    }
-
-    .bgc-default-tp1 {
-        background-color: rgba(121,169,197,.92) !important;
-    }
-
-    .bgc-default-l4, .bgc-h-default-l4:hover {
-        background-color: #f3f8fa !important;
-    }
-
-    .page-header .page-tools {
-        -ms-flex-item-align: end;
-        align-self: flex-end;
-    }
-
-    .btn-light {
-        color: #757984;
-        background-color: #f5f6f9;
-        border-color: #dddfe4;
-    }
-
-    .w-2 {
-        width: 1rem;
-    }
-
-    .text-120 {
-        font-size: 120% !important;
-    }
-
-    .text-primary-m1 {
-        color: #4087d4 !important;
-    }
-
-    .text-danger-m1 {
-        color: #dd4949 !important;
-    }
-
-    .text-blue-m2 {
-        color: #68a3d5 !important;
-    }
-
-    .text-150 {
-        font-size: 150% !important;
-    }
-
-    .text-60 {
-        font-size: 60% !important;
-    }
-
-    .text-grey-m1 {
-        color: #7b7d81 !important;
-    }
-
-    .align-bottom {
-        vertical-align: bottom !important;
+    .btn.btn-white, .btn.btn-white.disabled, .btn.btn-white.disabled:focus, .btn.btn-white.disabled:hover, .btn.btn-white[disabled], .btn.btn-white[disabled]:focus, .btn.btn-white[disabled]:hover {
+        color: #2d353c;
+        background: #fff;
+        border-color: #d9dfe3;
     }
 </style>
-
-<div class="page-content container">
-    <div class="page-header text-blue-d2">
-        <h1 class="page-title text-secondary-d1">
-            Invoice
-            <small id="invoiceName" class="page-info">
-                <i class="fa fa-angle-double-right text-80"></i>
-               
-            </small>
-        </h1>
-
-        <div class="page-tools">
-            <div class="action-buttons">
-                <a class="btn bg-white btn-light mx-1px text-95" href="javascript:window.print()" data-title="Print">
-                    <i class="mr-1 fa fa-print text-primary-m1 text-120 w-2"></i>
-                    Print
-                </a>
-               
+<div class="container">
+    <div class="col-md-12">
+        <div class="invoice">
+            <!-- begin invoice-company -->
+            <div class="invoice-company text-inverse f-w-600">
+                <span class="pull-right hidden-print">
+                    <a href="javascript:;" class="btn btn-sm btn-white m-b-10 p-l-5"><i class="fa fa-file t-plus-1 text-danger fa-fw fa-lg"></i> Export as PDF</a>
+                    <a href="javascript:;" onclick="window.print()" class="btn btn-sm btn-white m-b-10 p-l-5"><i class="fa fa-print t-plus-1 fa-fw fa-lg"></i> Print</a>
+                </span>
+                Eng House
             </div>
+            <!-- end invoice-company -->
+            <!-- begin invoice-header -->
+            <div class="invoice-header">
+                <div class="invoice-from">
+                    <small>from</small>
+                    <address class="m-t-5 m-b-5">
+                        <strong class="text-inverse">Eng House</strong><br>
+                        Amman-Jordan<br>
+                        EngHouse@gmail.com<br>
+                        Phone: (123)456-7890<br>
+
+                    </address>
+                </div>
+                <div class="invoice-to">
+                    <small>to</small>
+                    <address class="m-t-5 m-b-5">
+                        <strong class="text-inverse">@Model.Project.Client.Name</strong><br>
+                        @Model.Project.Client.Address<br>
+                        @Model.Project.Client.Email<br>
+                        Phone: @Model.Project.Client.PhoneNumber<br>
+                    </address>
+                </div>
+                <div class="invoice-date">
+                    <small>Invoice / @Model.Title</small>
+                    <div class="date text-inverse m-t-5">@Model.Date</div>
+                    <div class="invoice-detail">
+                        #@Model.Id<br>
+                    </div>
+                </div>
+            </div>
+            <!-- end invoice-header -->
+            <!-- begin invoice-content -->
+            <div class="invoice-content">
+                <!-- begin table-responsive -->
+                <div class="table-responsive">
+                    <table class="table table-invoice">
+                        <thead>
+                            <tr>
+                                <th>Deliverable Name</th>
+                                <th class="text-center" width="10%">Payment Name</th>
+                                <th class="text-center" width="10%">Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @{
+                                foreach (var invoicepayment in Model.InvoicePaymentTerms)
+                                {
+                                    Total += invoicepayment.PaymentTerm.Amount;
+                                    <tr>
+                                        <td>
+                                            <span class="text-inverse">@invoicepayment.PaymentTerm.Deliverable.Name</span><br>
+                                            <small>@invoicepayment.PaymentTerm.Deliverable.Description</small>
+                                        </td>
+                                        <td class="text-center">@invoicepayment.PaymentTerm.Name</td>
+                                        <td class="text-center">@invoicepayment.PaymentTerm.Amount</td>
+                                    </tr>
+                                }
+                            }
+                            
+                        </tbody>
+                    </table>
+                </div>
+                <!-- end table-responsive -->
+                <!-- begin invoice-price -->
+                <div class="invoice-price">
+                    <div class="invoice-price-right">
+                        <small>TOTAL</small> <span class="f-w-600">$@Total</span>
+                    </div>
+                </div>
+                <!-- end invoice-price -->
+            </div>
+            <!-- end invoice-content -->
+            <!-- begin invoice-note -->
+            <div class="invoice-note">
+                * Make all cheques payable to Engineering House<br>
+                * Payment is due within 30 days<br>
+                * If you have any questions concerning this invoice, contact (123)456-7890, EngHouse@gmail.com
+            </div>
+            <!-- end invoice-note -->
+            <!-- begin invoice-footer -->
+            <div class="invoice-footer">
+                <p class="text-center m-b-5 f-w-600">
+                    THANK YOU FOR YOUR BUSINESS
+                </p>
+                <p class="text-center">
+                    <span class="m-r-10"><i class="fa fa-fw fa-lg fa-globe"></i> EngHouse.com</span>
+                    <span class="m-r-10"><i class="fa fa-fw fa-lg fa-phone-volume"></i> T:0779228472</span>
+                    <span class="m-r-10"><i class="fa fa-fw fa-lg fa-envelope"></i>EngHouse@gmail.com</span>
+                </p>
+            </div>
+            <!-- end invoice-footer -->
         </div>
     </div>
-
-    <div class="container px-0">
-        <div class="row mt-4">
-            <div class="col-12 col-lg-12">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="text-center text-150">
-                            <i class="fas fa-file-invoice fa-2x text-success-m2 mr-1"></i>
-                            <span class="text-default-d3">EngMan</span>
-                        </div>
-                    </div>
-                </div>
-                <!-- .row -->
-
-                <hr class="row brc-default-l1 mx-n1 mb-4" />
-
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div id="clientName">
-                            <span class="text-sm text-grey-m2 align-middle">To:</span>
-
-                        </div>
-                        <div class="text-grey-m2">
-                            <div id="clientEmail" class="my-1">
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- /.col -->
-
-                    <div class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end">
-                        <hr class="d-sm-none" />
-                        <div class="text-grey-m2">
-                            <div class="mt-1 mb-2 text-secondary-m1 text-600 text-125">
-                                Invoice
-                            </div>
-
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span id="invoiceId" class="text-600 text-90">ID:</span> </div>
-
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span id="invoiceDate" class="text-600 text-90">Issue Date:</span> </div>
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span id="projectName" class="text-600 text-90">Project Name:</span> </div>
-
-                        </div>
-                    </div>
-                    <!-- /.col -->
-                </div>
-                <!--invoice detalis-->
-                <div class="mt-4">
-                    <!--cloumn names:-->
-                    <div class="row text-600 text-white bgc-default-tp1 py-25">
-                        <div class="d-none d-sm-block col-1">Payment Name</div>
-                        <div class="col-9 col-sm-5">Amount</div>
-                        <div class="d-none d-sm-block col-4 col-sm-2">Deliverable Name</div>
-                    </div>
-
-                    <div id="Table" class="text-95 text-secondary-d3">
-                        <!--get data from api-->
-                    </div>
-
-                    <div class="row border-b-2 brc-default-l2"></div>
-                    <div class="row mt-3">
-                        <div class="row my-2 align-items-center bgc-primary-l3 p-2">
-                            <div class="col-7 text-right">
-                                Total Amount
-                            </div>
-                            <div class="col-5">
-                                <span id="totalAmount" class="text-150 text-success-d3 opacity-2"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <hr />
-            </div>
-        </div>
-    </div>
-
 </div>
