--- a/ProjectManagement/Views/Clients/NewClient.cshtml
+++ b/ProjectManagement/Views/Clients/NewClient.cshtml
@@ -14,11 +14,11 @@
     </div>
     <div class="form-group">
         <label>Enter Client Address:</label>
-        <input asp-for="Email" type="text" class="form-control">
+        <input asp-for="Address" type="text" class="form-control">
     </div>
     <div class="form-group">
         <label>Enter Client Phone Number:</label>
-        <input asp-for="Email" type="number" class="form-control">
+        <input asp-for="PhoneNumber" type="number" class="form-control">
         <span asp-validation-for="PhoneNumber" style="color: red;"></span>
     </div>
     <br />
