--- a/ProjectManagement/Views/Deliverables/NewDeliverable.cshtml
+++ b/ProjectManagement/Views/Deliverables/NewDeliverable.cshtml
@@ -5,11 +5,28 @@
   $( function() {
       $("#StartDate").datepicker();
       $("#EndDate").datepicker();
-  } );
+  });
+    function getProjectPhase(projectPhaseid) {
+        $.ajax({
+            url: "/Deliverables/GetProjectPhase",
+            data: { projectPhaseId: projectPhaseid.value },
+            contentType: "application/json",
+            success: function (projectPhase) {
+                debugger;
+                $("#PPStartDate").attr("value", projectPhase.startDate);
+                $("#PPEndDate").attr("value", projectPhase.endDate);
+            },
+            error: function () {
+                alert("something went wrong")
+            }
+        });
+    }
 </script>
 
 <form asp-controller="Deliverables" asp-action="CreateDeliverable" method="post">
     <input name="projectId" value="@ViewBag.project.Id" style="display:none;" />
+    <input id="PPStartDate" name="PPStartDate"  style="display:none;" />
+    <input id="PPEndDate" name="PPEndDate"  style="display:none;" />
     <div class="form-group">
         <label>Enter deliverable Name:</label>
         <input asp-for="Name" type="text" class="form-control">
@@ -23,16 +40,17 @@
     <div class="form-group">
         <label>Enter Start Date:</label>
         <input id="StartDate" name="StartDate" class="form-control">
-        <span  style="color: red;">@ViewBag.starterror</span>
+        <span asp-validation-for="StartDate" style="color: red;"></span>
     </div>
     <div class="form-group">
         <label>Enter End Date:</label>
         <input id="EndDate" name="EndDate" class="form-control">
-        <span style="color: red;">@ViewBag.enderror</span>
+        <span asp-validation-for="EndDate" style="color: red;"></span>
     </div>
     <br />
     <label>Choose Your Phase:</label>
-    <select name="ProjectPhaseId" class="form-control">
+    <select onchange="getProjectPhase(this)" asp-for="ProjectPhaseId" class="form-control">
+        <option value="none" selected disabled hidden>Select An option</option>
         @{
             foreach (var projectPhase in (List<ProjectPhase>)ViewBag.project.ProjectPhase)
             {
