--- a/ProjectManagement/Views/PaymentTerms/NewPaymentTerm.cshtml
+++ b/ProjectManagement/Views/PaymentTerms/NewPaymentTerm.cshtml
@@ -1,25 +1,19 @@
 ﻿@using PMISBLayer.Entities
-@model PaymentTerm
+@using Domain.Dtos
+@model CreatePaymentDto
 
 <form asp-controller="PaymentTerms" asp-action="CreatePaymentTerm" method="post">
     <input name="DeliverableId" value="@Model.DeliverableId" style="display:none;" />
+    <input name="ProjectAmount" value="@ViewBag.deliverable.ProjectPhase.Project.ContractAmount" style="display:none;" />
     <div class="form-group">
         <label>Enter PaymentTerm Name:</label>
         <input asp-for="Name" type="text" class="form-control">
-        @{
-            if (Model.Name == null)
-            {
-                <span asp-validation-for="Name" style="color: red;"></span>
-            }
-        }
-
+        <span asp-validation-for="Name" style="color: red;"></span>
     </div>
     <div class="form-group">
         <label>Enter Payment Amount:</label>
-        <input asp-for="Amount" type="number"  class="form-control">
-        <span asp-validation-for="Amount"  style="color: red;"></span>
-        <span style="color: red;">@ViewBag.AmountError</span>
-
+        <input asp-for="Amount" type="number" class="form-control">
+        <span asp-validation-for="Amount" style="color: red;"></span>
     </div>
     <br />
     <button type="submit" class="btn btn-success">Create</button>
