implemnt login in design

--- a/ProjectManagement/Views/Invoices/Index.cshtml
+++ b/ProjectManagement/Views/Invoices/Index.cshtml
@@ -10,7 +10,7 @@
 <a class="btn btn-primary" asp-controller="Invoices" asp-action="NewInvoice">Create New Invoice</a>
 <br />
 <br />
-<table id="AllInvoices" class="table table-striped">
+<table id="AllInvoices" class="table table-striped table-bordered" style="width:100%;">
     <thead>
         <tr>
             <th>Invoice Id</th>
