--- a/ProjectManagement/Views/PaymentTerms/Index.cshtml
+++ b/ProjectManagement/Views/PaymentTerms/Index.cshtml
@@ -9,7 +9,7 @@
     <a class="btn btn-primary" asp-controller="PaymentTerms" asp-action="NewPaymentTerm">Create Payment Term</a>
     <br />
     <br />
-    <table id="paymentTerms" class="table table-striped">
+    <table id="paymentTerms" class="table table-striped table-bordered" style="width:100%;">
         <thead>
             <tr>
                 <th>Payment Term Name</th>
