--- a/ProjectManagement/Views/Projects/Index.cshtml
+++ b/ProjectManagement/Views/Projects/Index.cshtml
@@ -10,7 +10,7 @@
 <a class="btn btn-primary" asp-controller="Projects" asp-action="NewProject">Create New Project</a>
 <br />
 <br />
-<table id="projects" class="table table-striped">
+<table id="projects" class="table table-striped table-bordered" style="width:100%;">
     <thead>
         <tr>
             <th> Id</th>
