--- a/ProjectManagement/Views/Clients/Index.cshtml
+++ b/ProjectManagement/Views/Clients/Index.cshtml
@@ -10,7 +10,7 @@
 <a class="btn btn-primary" asp-controller="Clients" asp-action="NewClient">Create New Client</a>
 <br />
 <br />
-<table id="clients" class="table table-striped">
+<table id="clients" class="table table-striped table-bordered" style="width:100%;">
     <thead>
         <tr>
             <th>Client Name</th>
