--- a/ProjectManagement/Views/Deliverables/AllDeliverables.cshtml
+++ b/ProjectManagement/Views/Deliverables/AllDeliverables.cshtml
@@ -8,7 +8,7 @@
     </script>
     <br />
     <br />
-    <table id="AllDeliverables" class="table table-striped">
+    <table id="AllDeliverables" class="table table-striped table-bordered" style="width:100%;">
         <thead>
             <tr>
                 <th>Deliverable Name</th>
