--- a/ProjectManagement/Views/Deliverables/Index.cshtml
+++ b/ProjectManagement/Views/Deliverables/Index.cshtml
@@ -11,7 +11,7 @@
 
 <br />
 <br />
-<table id="Deliverables" class="table table-striped">
+<table id="Deliverables" class="table table-striped table-bordered" style="width:100%;">
     <thead>
         <tr>
             <th>Deliverable Name</th>
