--- a/ProjectManagement/Views/PaymentTerms/AllPayments.cshtml
+++ b/ProjectManagement/Views/PaymentTerms/AllPayments.cshtml
@@ -8,7 +8,7 @@
     </script>
     <br />
     <br />
-    <table id="AllpaymentTerms" class="table table-striped">
+    <table id="AllpaymentTerms" class="table table-striped table-bordered" style="width:100%;">
         <thead>
             <tr>
                 <th>PaymentTerm Name</th>
