--- a/ProjectManagement/Views/ProjectsPhases/Index.cshtml
+++ b/ProjectManagement/Views/ProjectsPhases/Index.cshtml
@@ -9,7 +9,7 @@
 <a class="btn btn-primary" asp-controller="ProjectsPhases" asp-action="NewProjectPhase">Create Project Phase</a>
 <br />
 <br />
-<table id="projectsPhases" class="table table-striped">
+<table id="projectsPhases" class="table table-striped table-bordered" style="width:100%;">
     <thead>
         <tr>
             <th>project Name</th>
