--- a/ProjectManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProjectManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -72,7 +72,7 @@
                                         <span asp-for="Input.ConfirmPassword" class="text-danger"></span>
                                     </div>
                                     <div class="text-center pt-1 mb-5 pb-1">
-                                        <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">
+                                        <button class="btn btn-info btn-block fa-lg  mb-3" type="submit">
                                            Register
                                         </button>
                                        
@@ -81,7 +81,7 @@
 
                             </div>
                         </div>
-                        <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                        <div class="col-lg-6 d-flex align-items-center" style="background-color: #A0C3D2;">
                             <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                                 <h4 class="mb-4">We are more than just a company</h4>
                                 <p class="small mb-0">
